# stak

./: .gitignore  .travis.yml  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  hselect.py  setup.cfg  setup.py
apcmd/: __init__.py  hselect.py
apcmd/notebooks/: images.imfilter.ipynb  images.imutil.ipynb  load_all_iraf_tasks.ipynb  noao.imred.ipynb  tables.fitsio.ipynb
apcmd/tests/: test_example.py
docs/: environment.yml  index.rst  load_all_iraf_tasks.ipynb  rtd-pip-requirements
docs/apcmd/: index.rst
docs/notebooks/: Template.ipynb  Template.rst  images.imfilter.ipynb  images.imfilter.rst  images.imfit.ipynb  images.imfit.rst  images.imgeom.ipynb  images.imutil.ipynb  images.imutil.rst  index.rst  load_all_iraf_tasks.rst  noao.imred.crutil.ipynb  noao.imred.ipynb  noao.imred.rst  notebook_index.rst  stsdas.hst_calib.hstcos.ipynb  tables.fitsio.ipynb  tables.fitsio.rst
docs/source/: conf.py  index.rst
docs/source/commandline/: index.rst
docs/source/internal_notebooks/: load_all_iraf_tasks.ipynb
docs/source/notebooks/: Template.rst  images.imfilter.ipynb  images.imfilter.rst  images.imfit.ipynb  images.imfit.rst  images.imgeom.ipynb  images.imgeom.rst  images.imutil.ipynb  images.imutil.rst  imgtools.mstools.ipynb  index.rst  noao.imred.crutil.ipynb  noao.imred.crutil.rst  noao.imred.ipynb  notebook_index.rst  tables.fitsio.ipynb  (+1 more)
docs/stsdas/: index.rst
licenses/: LICENSE.rst
stak/: __init__.py  hselect.py  nbget.py
stak/tests/: coveragerc  setup_package.py  test_example.py
stsdas/: hselect.py
stsdas/notebooks/: images.imfit.ipynb
(+2 files in other folders)
